Able to update clusters list from central server
